--- a/config/config2.yaml
+++ b/config/config2.yaml
@@ -3,6 +3,6 @@
 # Config Docs: https://docs.deepwisdom.ai/main/en/guide/get_started/configuration.html
 llm:
   api_type: "openai"  # or azure / ollama / groq etc.
-  model: "gpt-4-turbo"  # or gpt-3.5-turbo
-  base_url: "https://api.openai.com/v1"  # or forward url / other llm url
-  api_key: "YOUR_API_KEY"
+  model: "gpt-3.5-turbo"  # or gpt-3.5-turbo
+  base_url: "https://api.chatanywhere.tech/v1"  # or forward url / other llm url
+  api_key: "sk-zdCy8EUxdUzG772nUTAeSyqopVOFD2j68hwQi5MgEtPGpjMb"
