--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,9 @@ name = "stfdowntown-metagpt"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = "==3.9.*"
+requires-python = ">=3.10.0"
 dependencies = [
+    "agent-network-test",
     "aiofiles==23.2.1",
     "aiohttp==3.8.6",
     "anthropic==0.47.2",
@@ -27,7 +28,7 @@ dependencies = [
     "gymnasium==0.29.1",
     "htmlmin>=0.1.12",
     "httplib2~=0.22.0",
-    "httpx==0.28.1",
+    "httpx==0.27.2",
     "imap-tools==1.5.0",
     "ipykernel==6.27.1",
     "ipython==8.17.2",
@@ -41,7 +42,7 @@ dependencies = [
     "nbformat==5.9.2",
     "networkx~=3.2.1",
     "numpy~=1.26.4",
-    "openai~=1.64.0",
+    "openai==1.44.1",
     "openpyxl~=3.1.5",
     "pandas==2.1.1",
     "pillow>=11.2.1",
@@ -50,7 +51,7 @@ dependencies = [
     "pygithub~=2.3",
     "pylint~=3.0.3",
     "python-docx==0.8.11",
-    "pyyaml==6.0.1",
+    "pyyaml==6.0.2",
     "qdrant-client==1.7.0",
     "qianfan~=0.4.4",
     "rank-bm25==0.2.2",
@@ -63,12 +64,12 @@ dependencies = [
     "spark-ai-python~=0.3.30",
     "ta==0.10.2",
     "tenacity==8.2.3",
-    "tiktoken==0.7.0",
-    "tqdm==4.66.2",
+    "tiktoken==0.9.0",
+    "tqdm==4.66.5",
     "tree-sitter~=0.23.2",
     "tree-sitter-python~=0.23.2",
     "typer==0.9.0",
-    "typing-extensions==4.11.0",
+    "typing-extensions==4.12.2",
     "typing-inspect==0.8.0",
     "unidiff==0.7.5",
     "volcengine-python-sdk[ark]~=1.0.94",
@@ -77,3 +78,6 @@ dependencies = [
     "wrapt==1.15.0",
     "zhipuai~=2.1.5",
 ]
+
+[tool.uv.sources]
+agent-network-test = { git = "https://github.com/WhuAgent/agent-network.git", rev = "ccbd1a961b22bf2d155eb0d583fa43b35d255dc5" }
